--- a/stylesheets/export.scss
+++ b/stylesheets/export.scss
@@ -77,6 +77,7 @@ body {
                         height: 24px;
                         display: flex;
                         align-items: center;
+                        justify-content: space-between;
                     }
 
                     .filters-container {
